// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContentText ACT theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-z14l6d-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ACT_ET theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1wtuq53-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-hr13c7-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-11erym-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-7jr99c-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;
